@@ -331,9 +331,13 @@ static cgiFormResultType cgiHtmlEscapeDataMultiLine(char *data, int len)
             if (link_syntax_len == 0) {
                 TRYPUTC(*data);
             } else {
-                o("<a href=\"%c%s\" rel=\"nofollow\">%c%s</a>",
-                        *data, link, 
-                        *data, link);
+                if (!LINK_IGNORE) {
+                    o("<a href=\"%c%s\" rel=\"nofollow\">%c%s</a>",
+                            *data, link, 
+                            *data, link);
+                } else {
+                    o("[link disabled]");
+                }
                 data += link_syntax_len - 1;
                 len -= link_syntax_len - 1;
             }
